# M1if39-2017

./: CMakeLists.txt  README.md
http/: CMakeLists.txt
http/include/http/: client.h  server.h  status_code.h  utility.h
http/tests/: http-client.cpp  http-server.cpp
manager/: main.cpp  webserver.cpp  webserver.h  wsserver.cpp  wsserver.h
manager/public/: index.html
process/: CMakeLists.txt
process/include/process/: ThreadedProcess.h
process/src/: ThreadedProcess.cpp
src/: video-client-bcast.cpp  video-client.cpp  video-server.cpp
tcp/: CMakeLists.txt
tcp/include/tcp/: Tcp.h  TcpClient.h  TcpRegisteredClient.h  TcpServer.h
tcp/src/: TcpClient.cpp  TcpRegisteredClient.cpp  TcpServer.cpp
tcp/src/internal/: TcpClientInternal.cpp  TcpClientInternal.h  TcpClientListener.cpp  TcpClientListener.h  TcpConnectionListener.cpp  TcpConnectionListener.h  TcpRegisteredClientInternal.cpp  TcpRegisteredClientInternal.h  TcpServerInternal.cpp  TcpServerInternal.h  TcpServerListener.cpp  TcpServerListener.h
tcp/tests/: chat-client.cpp  chat-server.cpp
web/: CMakeLists.txt
web/include/web/: utility.h
ws/: CMakeLists.txt
ws/include/ws/: client.h  server.h  utility.h
ws/tests/: ws-client.cpp  ws-server.cpp
